Monor: fix x-overflow on timeline

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ svg {
 
 
 .timeline {
-
+  overflow-x: hidden;
 }
 
 .form__part {
